<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="@dimen/_150dp"
            android:layout_height="@dimen/_150dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_title"
            android:textColor="@color/white"
            android:textSize="@dimen/thirty_s"
            android:layout_marginTop="12dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="@dimen/thirty_"
            android:paddingEnd="@dimen/thirty_"
            android:text="@string/intro_desc"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sixteen_sp" />

    </LinearLayout>
</RelativeLayout>