<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4dp"
    android:elevation="@dimen/_5dp"
    app:cardCornerRadius="@dimen/tweleve_dp"
    app:cardElevation="@dimen/_5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/itemImg"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_3dp"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_7dp"
            android:layout_marginTop="@dimen/_2dp"
            android:layout_marginBottom="@dimen/_3dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="@string/kdf_arabic_bar_b_q_platter"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3dp"
                android:text="@string/rs_50"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itemDesc"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3dp"
                android:maxLines="2"
                android:text="@string/item_short_description_will_come_here"
                android:textSize="@dimen/_16sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/cart"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_3dp"
            android:layout_marginEnd="@dimen/tweleve_dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/cart"
            app:tint="@color/primary" />

    </LinearLayout>
</androidx.cardview.widget.CardView>