<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/eighteen_dp"
    tools:context=".activities.SignInActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/fifty_dp"
           android:gravity="center"
           android:text="@string/sign_in"
           android:textColor="@color/primary"
           android:textSize="24sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/thirty_"
           android:text="Email"
           android:textSize="@dimen/eighteen_sp" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/filledTextField"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/tweleve_dp"
           app:hintEnabled="false">

           <!--this is the actual edit text which takes the input-->
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/emailEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/edit_text"
               android:hint="@string/enter_email" />

       </com.google.android.material.textfield.TextInputLayout>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/sixteen_dp"
           android:text="Password"
           android:textSize="@dimen/eighteen_sp" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/t2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/tweleve_dp"
           app:hintEnabled="false">

           <!--this is the actual edit text which takes the input-->
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/passwordEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/edit_text"
               android:hint="@string/password" />

       </com.google.android.material.textfield.TextInputLayout>

       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/signInBtn"
           android:layout_width="100dp"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:layout_marginTop="@dimen/sixteen_dp"
           android:background="@drawable/sign_btn"
           android:text="@string/sign_in"
           android:textColor="@color/white"
           android:textSize="@dimen/_17sp" />

       <TextView
           android:id="@+id/signUpTV"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Don't have an account | Sign Up"
           android:layout_gravity="center"
           android:layout_marginTop="@dimen/tweleve_dp"/>
   </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:elevation="@dimen/_5dp"
        android:visibility="gone"/>

</RelativeLayout>